--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -48,34 +48,34 @@
     "!dist/test/**"
   ],
   "dependencies": {
-    "@typespec/versioning": "workspace:~0.53.0",
-    "@typespec/compiler": "workspace:~0.53.1",
-    "@typespec/rest": "workspace:~0.53.0",
-    "@typespec/http": "workspace:~0.53.0",
-    "@typespec/openapi": "workspace:~0.53.0",
-    "@typespec/openapi3": "workspace:~0.53.1",
-    "@azure-tools/typespec-autorest": "workspace:~0.39.1",
-    "@azure-tools/typespec-azure-core": "workspace:~0.39.0",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.39.0",
-    "@azure-tools/typespec-client-generator-core": "workspace:~0.39.0",
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@emotion/react": "^11.11.3",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@typespec/openapi3": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/versioning": "workspace:~",
     "@vitejs/plugin-react": "~4.2.1",
-    "@emotion/react": "^11.11.1",
-    "es-module-shims": "~1.8.0",
-    "monaco-editor": "~0.45.0",
-    "react-dom": "~18.2.0",
+    "es-module-shims": "~1.8.2",
+    "monaco-editor": "~0.46.0",
     "react": "~18.2.0",
-    "vite": "^5.0.12"
+    "react-dom": "~18.2.0",
+    "vite": "^5.1.0"
   },
   "devDependencies": {
-    "@types/node": "~18.11.9",
-    "@types/react-dom": "~18.2.7",
-    "@typespec/eslint-config-typespec": "workspace:~0.53.0",
-    "@typespec/bundler": "workspace:~0.1.0",
-    "@typespec/playground": "workspace:~0.1.0",
-    "@playwright/test": "^1.39.0",
-    "eslint": "^8.55.0",
-    "rimraf": "~5.0.1",
+    "@playwright/test": "^1.41.2",
+    "@types/node": "~18.11.19",
+    "@types/react-dom": "~18.2.19",
+    "@typespec/bundler": "workspace:~",
+    "@typespec/eslint-config-typespec": "workspace:~",
+    "@typespec/playground": "workspace:~",
     "cross-env": "~7.0.3",
+    "eslint": "^8.56.0",
+    "rimraf": "~5.0.5",
     "typescript": "~5.3.3"
   }
 }
