--- a/packages/typespec-azure-portal-core/package.json
+++ b/packages/typespec-azure-portal-core/package.json
@@ -28,31 +28,31 @@
   "main": "dist/src/index.js",
   "tspMain": "lib/main.tsp",
   "peerDependencies": {
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.39.0",
-    "@typespec/compiler": "workspace:~0.53.1"
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@typespec/compiler": "workspace:~"
   },
   "devDependencies": {
-    "@azure-tools/typespec-autorest": "workspace:~0.39.1",
-    "@azure-tools/typespec-azure-core": "workspace:~0.39.0",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.39.0",
-    "@azure-tools/typespec-client-generator-core": "workspace:~0.39.0",
-    "@types/node": "~18.11.9",
-    "@typespec/compiler": "workspace:~0.53.1",
-    "@typespec/eslint-config-typespec": "workspace:~0.53.0",
-    "@typespec/eslint-plugin": "workspace:~0.53.0",
-    "@typespec/http": "workspace:~0.53.0",
-    "@typespec/library-linter": "workspace:~0.53.0",
-    "@typespec/openapi": "workspace:~0.53.0",
-    "@typespec/rest": "workspace:~0.53.0",
-    "@typespec/tspd": "workspace:~0.46.0",
-    "@typespec/versioning": "workspace:~0.53.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "@vitest/ui": "^1.1.3",
-    "c8": "~8.0.1",
-    "eslint": "^8.55.0",
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@types/node": "~18.11.19",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/eslint-config-typespec": "workspace:~",
+    "@typespec/eslint-plugin": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/library-linter": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/tspd": "workspace:~",
+    "@typespec/versioning": "workspace:~",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
+    "c8": "^9.1.0",
+    "eslint": "^8.56.0",
     "source-map-support": "~0.5.21",
     "typescript": "~5.3.3",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.2"
   },
   "exports": {
     ".": {
