--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -53,34 +53,34 @@
     "!dist/test/**"
   ],
   "dependencies": {
-    "pluralize": "^8.0.0",
-    "change-case": "~5.3.0"
+    "change-case": "~5.4.2",
+    "pluralize": "^8.0.0"
   },
   "peerDependencies": {
-    "@typespec/compiler": "workspace:~0.53.1",
-    "@typespec/http": "workspace:~0.53.0",
-    "@typespec/rest": "workspace:~0.53.0",
-    "@typespec/versioning": "workspace:~0.53.0"
+    "@typespec/compiler": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/versioning": "workspace:~"
   },
   "devDependencies": {
-    "@typespec/compiler": "workspace:~0.53.1",
-    "@typespec/http": "workspace:~0.53.0",
-    "@typespec/rest": "workspace:~0.53.0",
-    "@typespec/eslint-config-typespec": "workspace:~0.53.0",
-    "@typespec/library-linter": "workspace:~0.53.0",
-    "@typespec/eslint-plugin": "workspace:~0.53.0",
-    "@typespec/versioning": "workspace:~0.53.0",
-    "@azure-tools/typespec-azure-core": "workspace:~0.39.0",
-    "@typespec/prettier-plugin-typespec": "workspace:~0.53.0",
-    "@typespec/tspd": "workspace:~0.46.0",
-    "@types/node": "~18.11.9",
-    "eslint": "^8.55.0",
-    "vitest": "^1.2.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "@vitest/ui": "~1.1.3",
-    "c8": "~8.0.1",
-    "rimraf": "~5.0.1",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@types/node": "~18.11.19",
+    "@types/pluralize": "^0.0.33",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/eslint-config-typespec": "workspace:~",
+    "@typespec/eslint-plugin": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/library-linter": "workspace:~",
+    "@typespec/prettier-plugin-typespec": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/tspd": "workspace:~",
+    "@typespec/versioning": "workspace:~",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
+    "c8": "^9.1.0",
+    "eslint": "^8.56.0",
+    "rimraf": "~5.0.5",
     "typescript": "~5.3.3",
-    "@types/pluralize": "^0.0.30"
+    "vitest": "^1.2.2"
   }
 }
