--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -81,6 +81,9 @@
     "eslint": "^8.56.0",
     "rimraf": "~5.0.5",
     "typescript": "~5.3.3",
-    "vitest": "^1.2.2"
+    "vitest": "^1.2.2",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@azure-tools/typespec-autorest": "workspace:~"
   }
 }
