--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -52,6 +52,11 @@ jobs:
         env:
           NPM_AUTH_TOKEN: $(azure-sdk-npm-token)
 
+      - script: |
+          echo "Publish summary:"
+          cat ./publish-summary.json
+        displayName: Log publish summary
+
       - run: pnpm chronus-github create-releases --repo microsoft/typespec --publish-summary ./publish-summary.json
         name: Create github releases
         env:
