--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -23,8 +23,8 @@
     "@docusaurus/theme-common": "~3.1.1",
     "@fluentui/react-components": "~9.46.4",
     "@mdx-js/react": "^3.0.0",
-    "@typespec/playground": "workspace:~",
-    "@typespec/website": "workspace:~",
+    "@typespec/playground": "workspace:~0.2.0",
+    "@typespec/website": "workspace:~1.0.0",
     "clsx": "^2.1.0",
     "es-module-shims": "~1.8.2",
     "prism-react-renderer": "^2.3.1",
@@ -33,19 +33,19 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-azure-playground-website": "workspace:~",
-    "@azure-tools/typespec-azure-portal-core": "workspace:~",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
-    "@azure-tools/typespec-service-csharp": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~0.39.1",
+    "@azure-tools/typespec-azure-playground-website": "workspace:~1.0.0",
+    "@azure-tools/typespec-azure-portal-core": "workspace:~0.39.0",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.39.1",
+    "@azure-tools/typespec-client-generator-core": "workspace:~0.39.1",
+    "@azure-tools/typespec-service-csharp": "workspace:~0.32.0",
     "@docusaurus/module-type-aliases": "^3.1.1",
     "@docusaurus/tsconfig": "^3.1.1",
     "@docusaurus/types": "^3.1.1",
     "@types/node": "~18.11.19",
     "@types/react": "~18.2.55",
-    "@typespec/eslint-config-typespec": "workspace:~",
-    "@typespec/tspd": "workspace:~",
+    "@typespec/eslint-config-typespec": "workspace:~0.54.0",
+    "@typespec/tspd": "workspace:~0.46.0",
     "dotenv": "~16.4.1",
     "eslint": "^8.56.0",
     "file-loader": "~6.2.0",
