--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -54,28 +54,28 @@
     "!dist/test/**"
   ],
   "peerDependencies": {
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
-    "@typespec/compiler": "workspace:~",
-    "@typespec/http": "workspace:~",
-    "@typespec/openapi": "workspace:~",
-    "@typespec/rest": "workspace:~",
-    "@typespec/versioning": "workspace:~"
+    "@azure-tools/typespec-azure-core": "workspace:~0.39.1",
+    "@azure-tools/typespec-client-generator-core": "workspace:~0.39.1",
+    "@typespec/compiler": "workspace:~0.54.0",
+    "@typespec/http": "workspace:~0.54.0",
+    "@typespec/openapi": "workspace:~0.54.0",
+    "@typespec/rest": "workspace:~0.54.0",
+    "@typespec/versioning": "workspace:~0.54.0"
   },
   "devDependencies": {
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~0.39.1",
+    "@azure-tools/typespec-client-generator-core": "workspace:~0.39.1",
     "@types/node": "~18.11.19",
-    "@typespec/compiler": "workspace:~",
-    "@typespec/eslint-config-typespec": "workspace:~",
-    "@typespec/eslint-plugin": "workspace:~",
-    "@typespec/http": "workspace:~",
-    "@typespec/json-schema": "workspace:~",
-    "@typespec/library-linter": "workspace:~",
-    "@typespec/openapi": "workspace:~",
-    "@typespec/rest": "workspace:~",
-    "@typespec/tspd": "workspace:~",
-    "@typespec/versioning": "workspace:~",
+    "@typespec/compiler": "workspace:~0.54.0",
+    "@typespec/eslint-config-typespec": "workspace:~0.54.0",
+    "@typespec/eslint-plugin": "workspace:~0.54.0",
+    "@typespec/http": "workspace:~0.54.0",
+    "@typespec/json-schema": "workspace:~0.54.0",
+    "@typespec/library-linter": "workspace:~0.54.0",
+    "@typespec/openapi": "workspace:~0.54.0",
+    "@typespec/rest": "workspace:~0.54.0",
+    "@typespec/tspd": "workspace:~0.46.0",
+    "@typespec/versioning": "workspace:~0.54.0",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
     "c8": "^9.1.0",
