--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -38,21 +38,21 @@
     "!dist/test/**"
   ],
   "dependencies": {
-    "@azure-tools/typespec-autorest": "workspace:~0.40.0",
-    "@azure-tools/typespec-azure-core": "workspace:~0.40.0",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.40.0",
-    "@azure-tools/typespec-client-generator-core": "workspace:~0.40.0",
-    "@typespec/compiler": "workspace:~0.54.0",
-    "@typespec/http": "workspace:~0.54.0",
-    "@typespec/openapi": "workspace:~0.54.0",
-    "@typespec/openapi3": "workspace:~0.54.0",
-    "@typespec/rest": "workspace:~0.54.0",
-    "@typespec/versioning": "workspace:~0.54.0"
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@typespec/openapi3": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/versioning": "workspace:~"
   },
   "devDependencies": {
     "@types/node": "~18.11.19",
-    "@typespec/eslint-config-typespec": "workspace:~0.54.0",
-    "@typespec/internal-build-utils": "workspace:~0.54.0",
+    "@typespec/eslint-config-typespec": "workspace:~",
+    "@typespec/internal-build-utils": "workspace:~",
     "@typespec/samples": "workspace:~1.0.0",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
