--- a/packages/typespec-azure-core/package.json
+++ b/packages/typespec-azure-core/package.json
@@ -52,21 +52,21 @@
     "!dist/test/**"
   ],
   "peerDependencies": {
-    "@typespec/compiler": "workspace:~0.54.0",
-    "@typespec/http": "workspace:~0.54.0",
-    "@typespec/rest": "workspace:~0.54.0"
+    "@typespec/compiler": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/rest": "workspace:~"
   },
   "devDependencies": {
     "@types/node": "~18.11.19",
-    "@typespec/compiler": "workspace:~0.54.0",
-    "@typespec/eslint-config-typespec": "workspace:~0.54.0",
-    "@typespec/eslint-plugin": "workspace:~0.54.0",
-    "@typespec/http": "workspace:~0.54.0",
-    "@typespec/library-linter": "workspace:~0.54.0",
-    "@typespec/openapi": "workspace:~0.54.0",
-    "@typespec/rest": "workspace:~0.54.0",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/eslint-config-typespec": "workspace:~",
+    "@typespec/eslint-plugin": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/library-linter": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@typespec/rest": "workspace:~",
     "@typespec/tspd": "workspace:~0.46.0",
-    "@typespec/versioning": "workspace:~0.54.0",
+    "@typespec/versioning": "workspace:~",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
     "c8": "^9.1.0",
