--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -50,17 +50,17 @@
     "!dist/test/**"
   ],
   "dependencies": {
-    "@azure-tools/typespec-autorest": "workspace:~0.40.0",
-    "@azure-tools/typespec-azure-core": "workspace:~0.40.0",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~0.40.0",
-    "@azure-tools/typespec-client-generator-core": "workspace:~0.40.0",
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@azure-tools/typespec-client-generator-core": "workspace:~",
     "@emotion/react": "^11.11.3",
-    "@typespec/compiler": "workspace:~0.54.0",
-    "@typespec/http": "workspace:~0.54.0",
-    "@typespec/openapi": "workspace:~0.54.0",
-    "@typespec/openapi3": "workspace:~0.54.0",
-    "@typespec/rest": "workspace:~0.54.0",
-    "@typespec/versioning": "workspace:~0.54.0",
+    "@typespec/compiler": "workspace:~",
+    "@typespec/http": "workspace:~",
+    "@typespec/openapi": "workspace:~",
+    "@typespec/openapi3": "workspace:~",
+    "@typespec/rest": "workspace:~",
+    "@typespec/versioning": "workspace:~",
     "@vitejs/plugin-react": "~4.2.1",
     "es-module-shims": "~1.8.2",
     "monaco-editor": "~0.46.0",
@@ -73,7 +73,7 @@
     "@types/node": "~18.11.19",
     "@types/react-dom": "~18.2.19",
     "@typespec/bundler": "workspace:~0.1.1",
-    "@typespec/eslint-config-typespec": "workspace:~0.54.0",
+    "@typespec/eslint-config-typespec": "workspace:~",
     "@typespec/playground": "workspace:~0.2.0",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
