--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -72,9 +72,9 @@
     "@playwright/test": "^1.41.2",
     "@types/node": "~18.11.19",
     "@types/react-dom": "~18.2.19",
-    "@typespec/bundler": "workspace:~0.1.1",
+    "@typespec/bundler": "workspace:~",
     "@typespec/eslint-config-typespec": "workspace:~",
-    "@typespec/playground": "workspace:~0.2.0",
+    "@typespec/playground": "workspace:~",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
     "cross-env": "~7.0.3",
