--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -67,7 +67,7 @@
     "@typespec/library-linter": "workspace:~",
     "@typespec/openapi": "workspace:~",
     "@typespec/rest": "workspace:~",
-    "@typespec/tspd": "workspace:~0.46.0",
+    "@typespec/tspd": "workspace:~",
     "@vitest/coverage-v8": "^1.2.2",
     "c8": "^9.1.0",
     "eslint": "^8.56.0",
