--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -31,14 +31,14 @@ jobs:
       - checkout: self
         submodules: true
 
-      - template: ./templates/install.yml
-        parameters:
-          nodeVersion: "20.x"
-
-      - script: pnpm chronus-github create-releases --repo azure/typespec-azure --publish-summary ./publish-summary.json
+      - script: npx @chronus/github create-releases --repo azure/typespec-azure --publish-summary ./publish-summary-temp.json
         displayName: Create github releases
         env:
           GITHUB_TOKEN: $(azuresdk-github-pat)
+
+      # - template: ./templates/install.yml
+      #   parameters:
+      #     nodeVersion: "20.x"
 
       # - template: ./templates/build.yml
       # - script: pnpm run test-official
