--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -33,8 +33,8 @@ jobs:
 
       - script: npx @chronus/github create-releases --repo azure/typespec-azure --publish-summary ./report-summary-temp.json
         displayName: Create github releases
-        env:
-          GITHUB_TOKEN: "token $(azuresdk-github-pat)"
+        # env:
+        #   GITHUB_TOKEN: "token $(azuresdk-github-pat)"
 
       # - template: ./templates/install.yml
       #   parameters:
