--- a/eng/pipelines/pr.yml
+++ b/eng/pipelines/pr.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        # Node 18.x + .NET 6
+        # Node 18 + .NET 6
         "Linux - Node 18.x + .NET 6":
           pool: azsdk-pool-mms-ubuntu-2004-general
           imageName: ubuntu-20.04
@@ -26,7 +26,7 @@ jobs:
           nodeVersion: 18.x
           dotnetVersion: 6.0.x
 
-        # Node 20.x + .NET 6
+        # Node 20 + .NET 6
         "Linux - Node 20.x + .NET 6":
           pool: azsdk-pool-mms-ubuntu-2004-general
           imageName: ubuntu-20.04
