--- a/eng/pipelines/pr.yml
+++ b/eng/pipelines/pr.yml
@@ -14,25 +14,25 @@ jobs:
 
     strategy:
       matrix:
-        # Node 18 + .NET 8
-        "Linux - Node 18.x + .NET 8":
+        # Node 18
+        "Linux - Node 18.x":
           pool: azsdk-pool-mms-ubuntu-2004-general
           imageName: ubuntu-20.04
           nodeVersion: 18.x
           dotnetVersion: 8.0.x
-        "Windows - Node 18.x + .NET 8":
+        "Windows - Node 18.x":
           pool: azsdk-pool-mms-win-2022-general
           imageName: windows-2022
           nodeVersion: 18.x
           dotnetVersion: 8.0.x
 
-        # Node 20 + .NET 8
-        "Linux - Node 20.x + .NET 8":
+        # Node 20
+        "Linux - Node 20.x":
           pool: azsdk-pool-mms-ubuntu-2004-general
           imageName: ubuntu-20.04
           nodeVersion: 20.x
           dotnetVersion: 8.0.x
-        "Windows - Node 20.x + .NET 8":
+        "Windows - Node 20.x":
           pool: azsdk-pool-mms-win-2022-general
           imageName: windows-2022
           nodeVersion: 20.x
