--- a/packages/samples/specs/resource-manager/tspconfig.yaml
+++ b/packages/samples/specs/resource-manager/tspconfig.yaml
@@ -4,3 +4,8 @@ options:
   "@azure-tools/typespec-autorest":
     use-read-only-status-schema: true
     arm-types-dir: "{project-root}/common-types"
+linter:
+  extends:
+    # - "@azure-tools/typespec-azure-resource-manager/all"
+  enable:
+    "@azure-tools/typespec-azure-core/no-enum": true
