--- a/.github/ISSUE_TEMPLATE/onboarding-request.yml
+++ b/.github/ISSUE_TEMPLATE/onboarding-request.yml
@@ -37,7 +37,7 @@ body:
       label: Link to your repo if available
 
   - type: textarea
-    id: next-millestone
+    id: additional-notes
     attributes:
       label: Additional notes or questions
       description: Add any other context or questions here.
