--- a/eng/pipelines/jobs/publish-artifacts.yml
+++ b/eng/pipelines/jobs/publish-artifacts.yml
@@ -14,10 +14,10 @@ jobs:
       - checkout: self
         submodules: true
 
-      - template: ../templates/install.yml
+      - template: /eng/pipelines/templates/install.yml
         parameters:
           nodeVersion: "20.x"
-      - template: ../templates/build.yml
+      - template: /eng/pipelines/templates/build.yml
 
       - script: node ./core/packages/internal-build-utils/cmd/cli.js bump-version-pr . --pr $(System.PullRequest.PullRequestNumber) --buildNumber $(Build.BuildNumber)
         displayName: Bump version to prerelease targets
@@ -29,6 +29,8 @@ jobs:
       - script: pnpm run pack:all
         displayName: Pack packages
 
-      - publish: $(Build.SourcesDirectory)/temp/artifacts
-        artifact: packages
+      - task: 1ES.PublishPipelineArtifact@1
         displayName: Publish packages(.tgz) as pipeline artifacts
+        inputs:
+          path: $(Build.SourcesDirectory)/common/temp/artifacts/packages
+          artifact: packages
