--- a/eng/pipelines/pr-tryit.yml
+++ b/eng/pipelines/pr-tryit.yml
@@ -1,71 +1,76 @@
-name: PR Tools
 trigger: none
 pr:
   - main
   - release/*
 
-variables:
-  - template: templates/variables/globals.yml
-
-jobs:
-  - job: publish_playground
-    displayName: Publish playground & website
+extends:
+  template: /eng/pipelines/templates/1es-redirect.yml
+  parameters:
     variables:
-      TYPESPEC_WEBSITE_BASE_PATH: "typespec-azure/prs/$(System.PullRequest.PullRequestNumber)/"
-    pool:
-      name: azsdk-pool-mms-ubuntu-2004-general
-      vmImage: ubuntu-20.04
+      - template: /eng/pipelines/templates/variables/globals.yml@self
+    stages:
+      - stage: Publish
+        jobs:
+          - job: publish_playground
+            displayName: Publish playground & website
+            variables:
+              TYPESPEC_WEBSITE_BASE_PATH: "typespec-azure/prs/$(System.PullRequest.PullRequestNumber)/"
+            pool:
+              name: $(LINUXPOOL)
+              image: $(LINUXVMIMAGE)
+              os: linux
 
-    steps:
-      - checkout: self
-        submodules: true
-        persistCredentials: true
+            steps:
+              - checkout: self
+                submodules: true
+                persistCredentials: true
 
-      - template: ./templates/install.yml
+              - template: /eng/pipelines/templates/install.yml@self
 
-      - script: pnpm run build
-        displayName: Build
+              - script: pnpm run build
+                displayName: Build
 
-      - task: AzureCLI@1
-        displayName: "Publish playground to PR endpoint"
-        inputs:
-          azureSubscription: "Azure SDK Engineering System"
-          scriptLocation: inlineScript
-          inlineScript: |
-            az storage blob upload-batch \
-              --destination \$web \
-              --account-name "cadlplayground" \
-              --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
-              --source "./packages/typespec-azure-playground-website/dist/" \
-              --overwrite
+              - task: AzureCLI@1
+                displayName: "Publish playground to PR endpoint"
+                inputs:
+                  azureSubscription: "Azure SDK Engineering System"
+                  scriptLocation: inlineScript
+                  inlineScript: |
+                    az storage blob upload-batch \
+                      --destination \$web \
+                      --account-name "cadlplayground" \
+                      --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
+                      --source "./packages/typespec-azure-playground-website/dist/" \
+                      --overwrite
 
-      - task: AzureCLI@1
-        displayName: "Publish website to PR endpoint"
-        inputs:
-          azureSubscription: "Azure SDK Engineering System"
-          scriptLocation: inlineScript
-          inlineScript: |
-            az storage blob upload-batch \
-              --destination \$web \
-              --account-name "tspwebsitepr" \
-              --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
-              --source "./packages/website/build/" \
-              --overwrite
+              - task: AzureCLI@1
+                displayName: "Publish website to PR endpoint"
+                inputs:
+                  azureSubscription: "Azure SDK Engineering System"
+                  scriptLocation: inlineScript
+                  inlineScript: |
+                    az storage blob upload-batch \
+                      --destination \$web \
+                      --account-name "tspwebsitepr" \
+                      --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
+                      --source "./packages/website/build/" \
+                      --overwrite
 
-      - script: node core/eng/scripts/create-tryit-comment.js "typespec-azure"
-        displayName: Check already commented
-        env:
-          GH_TOKEN: $(azuresdk-github-pat)
-  - job: change_comment
-    displayName: Describe changes on PR
-    condition: and(succeeded(), eq(startsWith(variables['System.PullRequest.SourceBranch'], 'publish/'), false))
-    pool:
-      name: azsdk-pool-mms-ubuntu-2004-general
-      vmImage: ubuntu-20.04
-    steps:
-      - checkout: self
+              - script: node core/eng/scripts/create-tryit-comment.js "typespec-azure"
+                displayName: Check already commented
+                env:
+                  GH_TOKEN: $(azuresdk-github-pat)
+          - job: change_comment
+            displayName: Describe changes on PR
+            condition: and(succeeded(), eq(startsWith(variables['System.PullRequest.SourceBranch'], 'publish/'), false))
+            pool:
+              name: $(LINUXPOOL)
+              image: $(LINUXVMIMAGE)
+              os: linux
+            steps:
+              - checkout: self
 
-      - script: npx -p @chronus/github-pr-commenter@0.3.0 chronus-github-pr-commenter verify
-        displayName: Make comment about changes
-        env:
-          GITHUB_TOKEN: $(azuresdk-github-pat)
+              - script: npx -p @chronus/github-pr-commenter@0.3.0 chronus-github-pr-commenter verify
+                displayName: Make comment about changes
+                env:
+                  GITHUB_TOKEN: $(azuresdk-github-pat)
