--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -38,6 +38,8 @@
     "@azure-tools/typespec-azure-portal-core": "workspace:~",
     "@azure-tools/typespec-azure-resource-manager": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-autorest-canonical": "workspace:~",
+    "@azure-tools/typespec-autorest": "workspace:~",
     "@azure-tools/typespec-service-csharp": "workspace:~",
     "@docusaurus/module-type-aliases": "^3.1.1",
     "@docusaurus/tsconfig": "^3.1.1",
