Add image keys to cspell

--- a/cspell.yaml
+++ b/cspell.yaml
@@ -32,16 +32,21 @@ words:
   - DMSS
   - Donezo
   - dynatrace
+  - espt
   - foos
   - horiz
   - Howtos
   - infile
   - kvset
   - liftr
+  - LINUXNEXTVMIMAGE
+  - LINUXOS
+  - LINUXVMIMAGE
   - logz
   - LRO
   - lropaging
   - Lucene
+  - MACVMIMAGE
   - msazure
   - msdata
   - mylocation
@@ -49,6 +54,7 @@ words:
   - odata
   - Onco
   - oncophenotype
+  - psscriptanalyzer
   - PAYG
   - prismjs
   - qnas
@@ -59,3 +65,4 @@ words:
   - SERVICERP
   - tcgc
   - userrp
+  - WINDOWSVMIMAGE
