--- a/eng/pipelines/jobs/e2e-job.yml
+++ b/eng/pipelines/jobs/e2e-job.yml
@@ -1,8 +1,10 @@
 jobs:
   - job: e2e
+
     pool:
-      name: azsdk-pool-mms-ubuntu-2004-general
-      vmImage: ubuntu-20.04
+      name: $(LINUXPOOL)
+      image: $(LINUXVMIMAGE)
+      os: linux
 
     variables:
       TYPESPEC_VS_CI_BUILD: true # Enable official Visual Studio extension build
@@ -12,9 +14,9 @@ jobs:
       - checkout: self
         submodules: true
 
-      - template: ./templates/install.yml
+      - template: /eng/pipelines/templates/install.yml
 
-      - template: ./templates/build.yml
+      - template: /eng/pipelines/templates/build.yml
         parameters:
           nodeVersion: "20.x"
 
